--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,14 +22,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3.12
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.12"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest==8.2.1
+        pip install pytest
         pip install -e .
     - name: Test with pytest
       run: pytest
