--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,3 +1,33 @@
+name: CI
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Sync deps
+        run: uv sync
+
+      - name: Run tests
+        run: uv run pytest -q
 # This workflow will install Python dependencies, and run tests with a single
 # version of Python.
 #
