Added code to get ticker symbols and create a list of value-stocks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "IsThisStockGood"
 version = "0.1.0"
 description = ""
 readme = "README.md"
-requires-python = ">=3.8,<4.0"
+requires-python = ">=3.10,<4.0"
 authors = [
   { name = "Marco Janker and AI" }
 ]
@@ -11,12 +11,19 @@ dependencies = [
   "requests-futures>=1.0.1,<2.0.0",
   "wheel>=0.43.0,<0.44.0",
   "lxml>=5.2.2,<6.0.0",
-  "flask>=3.0.3,<4.0.0"
+  "flask>=3.0.3,<4.0.0",
+  "yfinance>=0.2.66",
+  "pandas>=2.0.3",
+  "numpy>=1.24.4",
+  "html5lib>=1.1",
+  "requests>=2.32.5",
+  "query>=0.1.4",
 ]
 
 [dependency-groups]
 dev = [
-  "pytest>=8.2.1,<9.0.0"
+  "pylint>=4.0.1",
+  "pytest>=8.2.1,<9.0.0",
 ]
 
 [build-system]
@@ -31,10 +38,13 @@ addopts = "-ra"
 testpaths = ["tests"]
 
 [tool.pylint]
-indent-string="  "
+indent-string="    "
 
 [tool.pylint.messages_control]
 disable = [
   "missing-docstring",
   "invalid-name",
+  "trailing-whitespace",
+  "line-too-long",
+  "broad-exception-caught",
 ]
