--- a/.gitignore
+++ b/.gitignore
@@ -419,3 +419,6 @@ secrets.json
 .Trashes
 ehthumbs.db
 Thumbs.db
+Greenblatt-Magic-Formula-Value-Investing-master.zip
+magic-formula/The Little Book That Beats the Market.md
+.gitignore
