--- a/.gitignore
+++ b/.gitignore
@@ -422,3 +422,4 @@ Thumbs.db
 Greenblatt-Magic-Formula-Value-Investing-master.zip
 magic-formula/The Little Book That Beats the Market.md
 .gitignore
+magic-formula/Value-Investing-Greenblatt-Formula.ipynb
