--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,21 +9,37 @@ services:
       - proxy
     environment:
       - PYTHONUNBUFFERED=1
-      - FLASK_ENV=production
+      - FLASK_ENV=development
       - ISG_HOST=0.0.0.0
       - ISG_PORT=8080
       - ISG_DEBUG=True
     labels:
+      # Shared
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
+      - "traefik.http.services.stocks-svc.loadbalancer.server.port=8080"
+      - "traefik.http.routers.stocks.service=stocks-svc"
 
       # HTTP router for subpath /stocks
       - "traefik.http.routers.stocks.entrypoints=web"
       - "traefik.http.routers.stocks.rule=Host(`www2.ululuu.de`) && PathPrefix(`/stocks`)"
+      - "traefik.http.routers.stocks.priority=100"
+      - "traefik.http.routers.stocks.middlewares=stocks-stripprefix@docker,default@file"
       - "traefik.http.routers.stocks.service=stocks-svc"
-      - "traefik.http.services.stocks-svc.loadbalancer.server.port=8080"
-      
+
+      # HTTPS router
+      - "traefik.http.routers.stocks-secure.entrypoints=websecure"
+      - "traefik.http.routers.stocks-secure.rule=Host(`www2.ululuu.de`) && PathPrefix(`/stocks`)"
+      - "traefik.http.routers.stocks-secure.tls=true"
+      - "traefik.http.routers.stocks-secure.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.stocks-secure.priority=100"
+      - "traefik.http.routers.stocks-secure.middlewares=stocks-stripprefix@docker,default@file"
+      - "traefik.http.routers.stocks-secure.service=stocks-svc"
+
+      # Middlewares
+      - "traefik.http.middlewares.stocks-stripprefix.stripprefix.prefixes=/stocks"
+
 networks:
   # Reuse existing external network created by Traefik
-  proxy: 
+  proxy:
     external: true
