--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ dependencies = [
   "requests-futures>=1.0.1,<2.0.0",
   "wheel>=0.43.0,<0.44.0",
   "lxml>=5.2.2,<6.0.0",
-  "flask>=3.0.3,<4.0.0"
+  "flask>=3.0.3,<4.0.0",
+  "pygments>=2.19.2",
+  "iniconfig>=2.1.0",
+  "pytest>=8.3.5",
+  "packaging>=25.0",
 ]
 
 [dependency-groups]
