added missing imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
   "pandas>=2.0.3",
   "aiohttp>=3.10.11",
   "requests-cache>=1.2.1",
+  "flask-limiter>=2.9.0",
 ]
 
 [dependency-groups]
