--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ authors = [
   { name = "Marco Janker and AI" }
 ]
 dependencies = [
-  "requests-futures>=1.0.1,<2.0.0",
   "wheel>=0.43.0,<0.44.0",
   "lxml>=5.2.2,<6.0.0",
   "flask>=3.0.3,<4.0.0",
@@ -16,6 +15,10 @@ dependencies = [
   "iniconfig>=2.1.0",
   "pytest>=8.3.5",
   "packaging>=25.0",
+  "numpy>=2.0.2,<3.0.0",
+  "pandas>=2.2.3,<3.0.0",
+  "requests>=2.32.3,<3.0.0",
+  "yfinance>=0.2.52,<0.3.0",
 ]
 
 [dependency-groups]
