--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,44 +1,72 @@
 [project]
-name = "IsThisStockGood"
-version = "0.1.0"
-description = ""
+name = "isthisstockgood"
+version = "2.0.0"
+description = "Flask web app to analyze stocks using Rule #1 investing principles with yfinance data"
 readme = "README.md"
-requires-python = ">=3.8,<4.0"
+requires-python = ">=3.9"
+license = "MIT"
 authors = [
-  { name = "Marco Janker and AI" }
+    { name = "IsThisStockGood Team" }
 ]
+keywords = ["stocks", "finance", "yfinance", "flask", "investing", "rule-one"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Financial and Insurance Industry",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Framework :: Flask",
+]
+
 dependencies = [
-  "requests-futures>=1.0.1,<2.0.0",
-  "wheel>=0.43.0,<0.44.0",
-  "lxml>=5.2.2,<6.0.0",
-  "flask>=3.0.3,<4.0.0",
-  "pygments>=2.19.2",
-  "iniconfig>=2.1.0",
-  "pytest>=8.3.5",
-  "packaging>=25.0",
+    "flask>=3.1.2",
+    "werkzeug>=3.1.3",
+    "yfinance>=0.2.66",
+    "pandas>=2.3.3",
+    "pytest>=8.4.2",
 ]
 
-[dependency-groups]
+[project.optional-dependencies]
 dev = [
-  "pytest>=8.2.1,<9.0.0"
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
+    "black>=25.9.0",
+    "ruff>=0.14.3",
+    "mypy>=1.18.2",
 ]
-
-[build-system]
-requires = ["setuptools>=61"]
-build-backend = "setuptools.build_meta"
-
-[tool.setuptools.packages.find]
-include = ["isthisstockgood*"]
 
 [tool.pytest.ini_options]
-addopts = "-ra"
 testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = "-v"
 
-[tool.pylint]
-indent-string="  "
+[tool.black]
+line-length = 100
+target-version = ['py39', 'py310', 'py311', 'py312']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.venv
+  | \.uv
+  | __pycache__
+  | build
+  | dist
+)/
+'''
 
-[tool.pylint.messages_control]
-disable = [
-  "missing-docstring",
-  "invalid-name",
-]
+[tool.ruff]
+line-length = 100
+target-version = "py39"
+select = ["E", "F", "W", "I", "N", "UP"]
+ignore = ["E501"]
+
+[tool.mypy]
+python_version = "3.9"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+ignore_missing_imports = true
